compiler/tests/en/errors/repeat_bad_bound.salam
// EXPECT: E063
func main:
    repeat 1 to "five":
        println "x"
    end
end
